会议已结束, 修改内容

--- a/src/main/resources/templates/page/cn/achieve.html
+++ b/src/main/resources/templates/page/cn/achieve.html
@@ -14,7 +14,7 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-  <title>关于ICABST|大会详情--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST2019成功召开| 2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
 	<meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
   <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
 	<meta name="robots" content="index,follow" />
@@ -77,66 +77,45 @@ var _hmt = _hmt || [];
 
   <div class="w-1200 bg_white pt-30">
 
-    <div class="page; f-20 lh-40" style="text-align: justify; font-family:'Times New Roman';">
+    <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
       <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会详情</div>
         <div class="public_p pb-20 pl-30">
-          <p style="text-align: center;">
-            <strong>2019国际前沿生物科学与技术学术会议（ICABST2019）会议通知</strong>
-          </p>
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办。
-          </p>
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、
-						及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。
-          </p>
-          <!--p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议；
-            且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。
-          </p-->
+					<div class="text-center">
+					<p><strong>
+					  ICABST2019成功在泰国曼谷召开
+						</strong></p>
+					</div>
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息
-						<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
-					</p>
-
-          <p><strong>重要时间</strong></p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报到签到：A. 2019年12月26日 15:00-17:00</br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. 2019年12月27日 8:00-8:40
-					</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;摘要截止：2019年11月20日</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册截止：2019年11月30日</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全文截止：全文长年均可投稿，本批次7月30日截止<br />&nbsp;</p>
-					
-					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/cn/venue" style="color: #102cf7" target="_blank"><u>会议地点</u></a>中相关内容</strong></p>
-        </div>
-
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会议题</div>
-        <div class="public_p pb-20 pl-30">
-          <p>
-            大会将围绕“前沿生物科学与技术”，分为以下议题：
-					</p>
-            <p>1. 分子生物学; </p>
-            <p>2. 光生物学与光化学</p>
-            <p>3. 生物力学与工程</p>
-            <p>4. 生物医学与制药</p>
-            <p>5. 生物化学</p>
-            <p>6. 农业食品及动植物</p>
-            <p>7. 其他相关领域应用</p>
-
-        </div>
-        <div class="background4" style="padding-left:55px; padding-bottom: 10px;">报告简介</div>
-        <div class="public_p pb-20 pl-30">
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。
-						大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。
-          </p>
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如参会者有意向做报告，请在提交参会信息时选择对应的报告形式并提交相关材料，大会将在一周内完成初审并告知审核结果。
-						口头报告/主题报告的报告人需在会议召开前将PPT提供给组委会；张贴海报的参会人员需按相关要求自行准备海报，并在签到时交予大会工作人员。
-					</p>
-        </div>
-
+						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。
+						 </p>
+					<p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在大会开幕式中，来自特拉维夫大学（Tel-Aviv University）的Gil Navon教授、哈佛医学院Hadi Shafiee教授作为大会主席为会议致词。
+						二位会议主席在欢迎词中简单介绍了APANSE协会，同时热烈欢迎来自世界各地的学者参加本届学术会议；同时，Gil Navon教授就2020年ICABST的合作做了简短报告。本届会议共有来自16个国家的学者参加，邀请了若干领域内杰出影响的专家做了大会报告，与会者深入广泛的讨论了相关议题。
+						</p>
+					<p>
+						本届会议持续两天，包括邀请报告、口头报告和张贴报告。作为邀请报告的报告人，Gil Navon教授拥有超过一万次数的引用，其H指数高达52；哈佛医学院Hadi Shafiee教授，作为部门负责人，具有丰富的教学、科研、及临床经验；同时，来自韩国哈利姆大学的Taisun Kim教授，兼任全球著名生物研究型企业Biometrix Technology Inc.的CEO，也做了重要报告。
+						在主讲报告后，玛希隆大学（Mahidol University）的Pornpun Vivithanaporn博士作为分会主持人，对三位主讲人的报告进行了高度评价并带领与会人员对于报告中所提出的研究热点进行了热烈的讨论。
+						</p>
+					<p>
+						会议结束后，大会组委会感谢每一位参会者的支持和参与，并为会议主讲人及优秀报告人颁发奖章，同时对泰国梅州大学（Maejo University）及玛希隆大学（Mahidol University）表达了诚挚的感谢。
+						</p>
+					<p>
+						ICABST为年度学术会议，且2020年的本会议正在紧张筹备中，欢迎来自各个国家和高校及研究机构的学者关注并参与。
+						同时，在此代表组委会和学术委员会，诚挚向社会各界发出合办邀请，如有单位、团体或个人有意向参与共同举办学术会议，可随时与我们取得联系。ICABST2020将在2月15日停止招收合办单位，请有意向的个人或团体尽早联系我方会务人员。
+						</p>
+						<ul>
+							<div class="text-center">
+							<li>
+								<img src="../img/O1.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="280px">
+								<img src="../img/O3.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="280px">
+								<img src="../img/O5.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="280px">
+								<img src="../img/O7.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="280px">
+								<img src="../img/O9.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="280px">
+								<img src="../img/C2.jpg" width="280px">
+							</li>
+							</div>
+							<div class="clear"></div>
+							</ul>
       </div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
@@ -211,3 +190,4 @@ var _hmt = _hmt || [];
 
 </body>
 </html>
+
