--- a/src/main/resources/templates/page/cn/article.html
+++ b/src/main/resources/templates/page/cn/article.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-			<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+			<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -228,10 +228,8 @@ var _hmt = _hmt || [];
                                     <option value="SCI专刊">SCI专刊（Special Issue）</option>
                                     <option value="SCI增刊">SCI增刊（Supplementary Issue）</option>
                                     <option value="SCI正刊/专刊/增刊">SCI正刊、专刊、增刊均可（SCI）</option>
-                                    <option value="EI/SCI">EI、SCI均可（EI/SCI）</option>
-                                    <option value="EI-JA">EI期刊（EI-JA）</option>
+                                    <option value="SCI摘要">SCI摘要</option>
                                     <option value="EI-CA">EI会议（EI-CA）</option>
-                                    <option value="CPCI-S">ISTP/CPCI-S检索（会议论文）</option>
                                 </select>
                             </div>
                         </div>
@@ -377,6 +375,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+			<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
