--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -83,6 +83,7 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
           <strong>亚太自然科学与工程协会(APANSE)<br/>
+					泰国梅州大学(Maejo University)</strong>
         </p>
 
 
@@ -159,8 +160,8 @@ var _hmt = _hmt || [];
         <!--li><img src="../img/3--cnki-logo.gif"/></li>
         <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
         <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
-        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li>
-				<li><img src="../img/7--IOP.png"/></li-->
+        <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
+				<li><img src="../img/7--IOP.png"/></li>
 				<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 				<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 				<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
@@ -195,6 +196,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
