--- a/src/main/resources/templates/page/cn/program.html
+++ b/src/main/resources/templates/page/cn/program.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -81,90 +81,10 @@ var _hmt = _hmt || [];
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">会议日程</div>
       <div class="public_p pb-20 pl-30">
-        <table border="1" cellpadding="0" cellspacing="0" style="width:100.0%;" width="100%">
-          <tbody>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px" colspan="2">2019年12月26日，周四 ---- 签到及注册 （酒店一楼大厅）</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px;  padding-left: 20px;">15:00-17:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">签到及注册</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">2019年12月27日，周五 ---- 会议召开 （会议室：Murano Room）</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">8:00-8:40</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">签到及注册</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">8:40-9:00</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">开幕式</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">开幕致辞</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">9:00-10:20</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">大会特邀报告</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">大会主题报告1</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:20-10:50</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">合影，茶歇及张贴海报</td>
-          </tr>
-          <tr>
-            <th rowspan="2" style="width: 35%; height: 38px; padding-left: 20px;">10:50-11:50</th>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">大会主题报告2</td>
-          </tr>
-          <tr>
-            <td style="width: 65%; height: 38px; padding-left: 20px;">大会主题报告3</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">12:00-13:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">午餐及张贴海报</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">13:30-17:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">口头报告(15:30-15:50 为茶歇及张贴海报时间)</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">2019年12月28日，周六 ---- 会议召开 （会议室：Murano Room）</th>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">8:30-10:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">口头报告</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:00-10:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">茶歇及张贴海报</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">10:30-12:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">口头报告</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">12:00-13:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">午餐及张贴海报</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">13:30-17:30</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">口头报告(15:30-15:50 为茶歇及张贴海报时间)</td>
-          </tr>
-          <tr>
-            <th style="width: 35%; height: 38px; padding-left: 20px;">17:00</th>
-            <td style="width: 55%; height: 38px; padding-left: 20px;">闭幕致辞</td>
-          </tr>
-          <tr>
-            <th style=" height: 38px; padding-left: 20px;" colspan="2">2019年12月29日，周日 ---- 学术访问</th>
-          </tr>
-
-
-          </tbody>
-        </table>&nbsp;<br/>&nbsp;
-      </div>
+      <li><img src="../img/program__1.png" height="1100px"></li>
+      <li><img src="../img/program__2.png" height="1100px"></li>
+			<li><img src="../img/program__3.png" height="1100px"></li>
+			</div>
 
     </div>
 
@@ -190,6 +110,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
