--- a/src/main/resources/templates/page/cn/sci1.html
+++ b/src/main/resources/templates/page/cn/sci1.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -145,6 +145,7 @@ var _hmt = _hmt || [];
               所有投稿文章需承诺无一稿多投，未在其他期刊或会议上公开发表;<br/>
               初稿需为word文档，中英文均可（终稿必须为英文），篇幅在2500words左右，图表分辨率在300dpi以上或作为独立附件提交；<br/>
               初稿无需排版，在文章通过审核后，会根据目标期刊的要求提供模板文件，届时完成排版即可；<br/>
+							SCI期刊长期征稿，每月均有送交机会，早投稿早发表；<br/>
             </p>
             <p><strong>2. 注意事项</strong><br/>
               投稿时请务必提供真实、有效的联系方式并将我方编辑邮箱加入您的白名单<br/>
@@ -190,6 +191,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
