--- a/src/main/resources/templates/page/cn/sciabstract.html
+++ b/src/main/resources/templates/page/cn/sciabstract.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -103,9 +103,9 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊ISSN：</strong>1742-7835<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>影响因子：</strong>2.45（最新JCR发布）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊分区：</strong>中科院分区三区，JCR分区Q2<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>本批次征稿将在12月底前后发表，并在明年2月份前完成检索<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>本批次征稿将在2020年3-4月份前后发表，发表后2个月左右完成SCI检索<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>文章模板：</strong><a href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u>点击下载摘要模板</u></a><br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于11月30日截止<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于2020年1月31日截止<br/>
 			</p>
             </div>
 							
@@ -182,6 +182,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
