--- a/src/main/resources/templates/page/cn/cpci.html
+++ b/src/main/resources/templates/page/cn/cpci.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -101,8 +101,8 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>出版物：</strong>IOP Conference Series: Earth and Environmental Science<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>出版国家：</strong>英国（United Kingdom）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>ISSN：</strong>1755-1307<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>2020年1月底前后发表，并在发表后2个月完成检索<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于12月15日截止<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>2020年3-4月份前后发表，并在发表后2-4个月左右完成检索<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于2020年1月31日截止<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>数据库收录：</strong>EI数据库（EI-Compendex） ISTP数据库（CPCI-S）<br/>
 			</p>
             </div>
@@ -180,6 +180,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
