--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -45,7 +45,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -103,7 +103,7 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">会议简介</div>
 				<div class="public_p pl-30">
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会与泰国梅州大学(Maejo University)联合主办召开。<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办召开。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议由Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
@@ -116,6 +116,7 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
+					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>点击下载会议指南(会议日程)</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
           <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
 					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
@@ -164,6 +165,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
@@ -195,8 +197,8 @@ var _hmt = _hmt || [];
       <!--li><img src="../img/3--cnki-logo.gif"/></li>
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
       <li><a href="http://www.brownwalker.com/event/22133" target="_blank"><img src="../img/5--bwp-logo.png"/></a></li>
-      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li>
-			<li><img src="../img/7--IOP.png"/></li-->
+      <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
+			<li><img src="../img/7--IOP.png"/></li>
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
 			<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
